force-app/main/default/objects/RelayedPlatformEvent__e/RelayedPlatformEvent__e.object-meta.xml
<CustomObject>
    <description>This is relayed</description>
    <label>RelayedPlatformEvent</label>
    <pluralLabel>RelayedPlatformEvents</pluralLabel>
</CustomObject>