force-app/main/default/objects/RelayedPlatformEvent__e/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <defaultValue>&quot;Relayed Event&quot;</defaultValue>
    <label>Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>