force-app/main/default/objects/RelayedPlatformEvent__e/fields/Payload_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Payload_Field_1__c</fullName>
    <defaultValue>&quot;Relayed Event Payload 1&quot;</defaultValue>
    <label>Payload Field 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>