force-app/main/default/objects/RelayedPlatformEvent__e/fields/Payload_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Payload_Field_2__c</fullName>
    <defaultValue>&quot;Relayed Event Payload 2&quot;</defaultValue>
    <label>Payload Field 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>